assembler checks and test case fixes