@@ -34,7 +34,11 @@ import java.lang.reflect.Constructor;
 import java.security.Key;
 import java.security.spec.AlgorithmParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
+import org.openjdk.jmh.annotations.Fork;
+import org.openjdk.jmh.annotations.Warmup;
 
+@Warmup(time=3, iterations=5) // Reflection needs time to be upgraded to bytecodes
+@Fork(value = 1, jvmArgsAppend = {"--add-opens", "java.base/com.sun.crypto.provider=ALL-UNNAMED"})
 public class Poly1305DigestBench extends CryptoBase {
     public static final int SET_SIZE = 128;
 
